--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Ersätt alla</string>
     <string name="matches">Träffar</string>
     <string name="search_replace_pattern_error_message">Sök eller ersätt mönsterfel.</string>
+    <string name="newline_is_new_paragraph">Newline = nytt stycke</string>
 </resources>
