--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Înlocuiește tot</string>
     <string name="matches">Meciuri</string>
     <string name="search_replace_pattern_error_message">Eroare de căutare sau înlocuire.</string>
+    <string name="newline_is_new_paragraph">Noutăți = punct nou</string>
 </resources>
