--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Reemplazar todo</string>
     <string name="matches">Coincidencias</string>
     <string name="search_replace_pattern_error_message">Error de patrón de búsqueda o reemplazo.</string>
+    <string name="newline_is_new_paragraph">Nueva línea = nuevo párrafo</string>
 </resources>
