[ci skip] Crowdin translation bot: New translations for Danish

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Erstat alle</string>
     <string name="matches">Kampe</string>
     <string name="search_replace_pattern_error_message">Søg eller erstat mønsterfejl.</string>
+    <string name="newline_is_new_paragraph">Newline = nyt afsnit</string>
 </resources>
