--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -395,4 +395,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Αντικατάσταση όλων</string>
     <string name="matches">Αντιστοιχίσεις</string>
     <string name="search_replace_pattern_error_message">Αναζήτηση ή αντικατάσταση σφάλματος μοτίβου.</string>
+    <string name="newline_is_new_paragraph">Newline = νέα παράγραφος</string>
 </resources>
