--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Zastąp wszystkie</string>
     <string name="matches">Mecze</string>
     <string name="search_replace_pattern_error_message">Błąd wyszukiwania lub zastępowania wzorca.</string>
+    <string name="newline_is_new_paragraph">Nowa linia = nowy ustęp</string>
 </resources>
