--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Заменить все</string>
     <string name="matches">Совпадения</string>
     <string name="search_replace_pattern_error_message">Поиск или замена шаблона.</string>
+    <string name="newline_is_new_paragraph">Newline = новый абзац</string>
 </resources>
