--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -394,4 +394,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Remplasa totu</string>
     <string name="matches">Currispondèntzias</string>
     <string name="search_replace_pattern_error_message">Faddina de chirca o de remplasamentu.</string>
+    <string name="newline_is_new_paragraph">Lìnia noa = paràgrafu nou</string>
 </resources>
