--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -393,4 +393,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_once">Zamijeni (1)</string>
     <string name="replace_all">Zamijeni sve</string>
     <string name="matches">Pronađeno</string>
+    <string name="newline_is_new_paragraph">Novi red = novi paragraf</string>
 </resources>
