[ci skip] Crowdin translation bot: New translations for Sinhala

--- a/app/src/main/res/values-si/strings.xml
+++ b/app/src/main/res/values-si/strings.xml
@@ -27,18 +27,27 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="image">පින්තූරය</string>
     <string name="select">තෝරන්න</string>
     <string name="create">සාදන්න</string>
+    <string name="contributors">සහදායකයින්</string>
+    <string name="licenses">බලපත්‍ර</string>
     <string name="language">භාෂාව</string>
     <string name="date">දිනය</string>
     <string name="deleteme____1">නම</string>
     <string name="size">ප්‍රමාණය</string>
     <string name="donate">පරිත්‍යාග</string>
+    <string name="exit">පිටවෙන්න</string>
     <string name="undo">පෙරසේ</string>
     <string name="redo">පසුසේ</string>
+    <string name="more">තව</string>
+    <string name="notebook">සටහන් පොත</string>
     <string name="help">උපකාර</string>
     <string name="list">ලැයිස්තුව</string>
+    <string name="history">ඉතිහාසය</string>
     <string name="save">සුරකින්න</string>
+    <string name="refresh">නැවුම් කරන්න</string>
+    <string name="files_and_folders">ගොනු සහ බහාලුම්</string>
     <string name="project">ව්‍යාපෘතිය</string>
     <string name="projects">ව්‍යාපෘති</string>
+    <string name="none">කිසිවක් නැත</string>
     <string name="other">වෙනත්</string>
     <string name="resources">සම්පත්</string>
     <string name="left">වම</string>
