[ci skip] Crowdin translation bot: New translations for Esperanto

--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -26,4 +26,40 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_folder_already_exists_please_use_a_different_name">Dosiero/dosierujo jam ekzistas! Bonvolu uzi malsaman nomon</string>
     <string name="import_from_device">Enporti el aparato</string>
     <string name="import_">Enporti</string>
+    <string name="append_to_witharg">Postaldoni al %s</string>
+    <string name="select_folder">Elekti dosierujon</string>
+    <string name="edit">Redakti</string>
+    <string name="search_documents">Serĉi dokumentojn</string>
+    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Konigi al&#8230;</string>
+    <string name="share">Konigi</string>
+    <string name="search">Serĉi</string>
+    <string name="editor">Redaktilo</string>
+    <string name="folders">Dosierujoj</string>
+    <string name="files">Dosieroj</string>
+    <string name="document">Dokumento</string>
+    <string name="documents">Dokumentoj</string>
+    <string name="document_editor_font">Tiparo de Dokumenta Redaktilo</string>
+    <string name="theme">Etoso</string>
+    <string name="about">Pri</string>
+    <string name="plaintext">Plata Teksto</string>
+    <string name="file">Dosiero</string>
+    <string name="image">Bildo</string>
+    <string name="font_size">Tipara Grando</string>
+    <string name="last_modified_witharg">Laste modifita: %s</string>
+    <string name="select_this_folder">Elekti ĉi tiun dosierujon</string>
+    <string name="select">Elekti</string>
+    <string name="create">Krei</string>
+    <string name="select_entries">Elekti elementojn</string>
+    <string name="priority">Prioritato</string>
+    <string name="history">Historio</string>
+    <string name="search_or_custom">Serĉi / Propra</string>
+    <string name="save">Konservi</string>
+    <string name="clear">Viŝi</string>
+    <string name="due_date">Limdato</string>
+    <string name="current_date">Aktuala dato</string>
+    <string name="archive">Arkivo</string>
+    <string name="add_task">Aldoni taskon</string>
+    <string name="add_x_witharg">Aldoni %s</string>
+    <string name="files_and_folders">Dosieroj kaj dosierujoj</string>
+    <string name="document_browser">Dokumenta foliumilo</string>
 </resources>
