[ci skip] Crowdin translation bot: New translations for Esperanto

--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -50,6 +50,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select">Elekti</string>
     <string name="create">Krei</string>
     <string name="select_entries">Elekti elementojn</string>
+    <string name="name">Dosiernomo</string>
+    <string name="insert_link">Enmeti Ligilon</string>
+    <string name="insert_image">Enmeti Bildon</string>
+    <string name="contributors">Kontribuantoj</string>
+    <string name="licenses">Permesiloj</string>
+    <string name="changelog">Ŝanĝoprotokolo</string>
+    <string name="more_info">Pli da informo</string>
+    <string name="language">Lingvo</string>
+    <string name="open_with">Malfermi per</string>
+    <string name="sort">Ordigi laŭ</string>
+    <string name="date">Dato</string>
+    <string name="deleteme____1">Nomo</string>
+    <string name="size">Grando</string>
+    <string name="exit">Eliri</string>
+    <string name="undo">Malfari</string>
+    <string name="redo">Refari</string>
+    <string name="more">Pli</string>
+    <string name="notebook">Notlibro</string>
+    <string name="help">Helpo</string>
+    <string name="todo_list">Listo de taskoj</string>
+    <string name="task">Tasko</string>
+    <string name="category">Kategorio</string>
+    <string name="context">Kunteksto</string>
+    <string name="list">Listo</string>
     <string name="priority">Prioritato</string>
     <string name="history">Historio</string>
     <string name="search_or_custom">Serĉi / Propra</string>
@@ -75,11 +99,76 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="categories">Kategorioj</string>
     <string name="none">Nenia</string>
     <string name="other">Aliaj</string>
+    <string name="empty_file">Malplena dosiero</string>
+    <string name="underline">Substreki</string>
+    <string name="tasks_with_todays_date">Taskoj kun hodiaŭa dato</string>
+    <string name="key_ctrl_a">Elekti ĉiujn (Ctrl+A)</string>
     <string name="key_tab">Tabo</string>
+    <string name="start_on_bottom">Komenci malsupren</string>
     <string name="unordered_list_char_dash">Streketo (-)</string>
     <string name="unordered_list_char_asterisk">Steleto (*)</string>
     <string name="unordered_list_char_plus">Pluso (+)</string>
     <string name="clipboard">Tondujo</string>
     <string name="translate">Traduku</string>
     <string name="source_code">Fontkodo</string>
+    <string name="directory">Dosierujo</string>
+    <string name="details">Detaloj</string>
+    <string name="calendar">Kalendaro</string>
+    <string name="description">Priskribo</string>
+    <string name="edit_picture">Redakti bildon</string>
+    <string name="color">Koloro</string>
+    <string name="foreground">Malfono</string>
+    <string name="background">Fono</string>
+    <string name="type">Tipo</string>
+    <string name="folder">Dosierujo</string>
+    <string name="font">Tiparo</string>
+    <string name="pick_date">Elekti daton</string>
+    <string name="pick_time">Elekti tempon</string>
+    <string name="result">Rezulto</string>
+    <string name="just_time">Nur tempo</string>
+    <string name="just_date">Nur dato</string>
+    <string name="my_note">mia_noto</string>
+    <string name="close">Fermi</string>
+    <string name="cancel">Rezigni</string>
+    <string name="go_to">Iri al</string>
+    <string name="black">Nigra</string>
+    <string name="white">Blanka</string>
+    <string name="view">Vido</string>
+    <string name="view_mode">Vida reĝimo</string>
+    <string name="edit_mode">Redakta reĝimo</string>
+    <string name="favourite">Plej ŝatata</string>
+    <string name="favourites">Plej ŝatataj</string>
+    <string name="please_wait">Bonvolu atendi</string>
+    <string name="tab_width">Taba larĝo</string>
+    <string name="template">Ŝablono</string>
+    <string name="print_pdf">Presi / PDF</string>
+    <string name="current">Nuna</string>
+    <string name="copy_file">Kopii dosieron</string>
+    <string name="page">Paĝo</string>
+    <string name="tools">Iloj</string>
+    <string name="read">Legi</string>
+    <string name="unordered_list">Neordigita listo</string>
+    <string name="ordered_list">Ordigita listo</string>
+    <string name="open_link">Malfermi ligilon</string>
+    <string name="common_color_picker">Kolora elektilo</string>
+    <string name="date_and_time">Dato kaj tempo</string>
+    <string name="jump_to_bottom">Salti al malsupro</string>
+    <string name="quote">Citaĵo</string>
+    <string name="heading">Titolo</string>
+    <string name="heading_1">Titolo 1</string>
+    <string name="heading_2">Titolo 2</string>
+    <string name="heading_3">Titolo 3</string>
+    <string name="heading_4">Titolo 4</string>
+    <string name="bold">Dikigi</string>
+    <string name="italic">Kursivigi</string>
+    <string name="create_new_file_or_folder">Krei novan dosieron aŭ dosierujon</string>
+    <string name="choose_format">Ekejtu formaton</string>
+    <string name="selected">Elektita</string>
+    <string name="created">Kreita</string>
+    <string name="file_settings">Dosieraj agordoj</string>
+    <string name="search_and_replace">Serĉi / Anstataŭi</string>
+    <string name="search_for">Serĉi por</string>
+    <string name="replace_with">Anstataŭi per</string>
+    <string name="replace_once">Anstataŭi (1)</string>
+    <string name="replace_all">Anstataŭi ĉiujn</string>
 </resources>
