--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -399,4 +399,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="searchCategory">Пошук</string>
     <string name="search_in_files">Пошук у файлах</string>
     <string name="search_in_files_summary">Дозволити шукати у файлах.</string>
+    <string name="show_search_result_on_cancel">Залишити результат при скасувані</string>
+    <string name="show_search_result_on_cancel_summary">Показує результат пошуку, якщо він не порожній, при натисненні на кнопку скасувати.</string>
+
 </resources>
