--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -402,5 +402,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_search_result_on_cancel">Залишити результат при скасувані</string>
     <string name="show_search_result_on_cancel_summary">Показує результат пошуку, якщо він не порожній, при натисненні на кнопку скасувати.</string>
     <string name="max_search_depth">Глубина пошуку</string>
+    <string name="ignored_directories_for_search">Інорувати директорії</string>
+    <string name="ignored_directories_for_search_dialog">Інорування каталогу з вказаними іменами. Використовуйте розділювач \'|\'. Використовуйте лапки для точного співпадіння: \"test\"|\"Test\". Або Regex:^\\..*|\"test\"|\"Test\"</string>
 
 </resources>
