--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -418,5 +418,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_search_result_on_cancel">Show result on cancel</string>
     <string name="show_search_result_on_cancel_summary">If a result is not empty you can get the result if you press a cancel button.</string>
     <string name="max_search_depth">Search depth</string>
+    <string name="ignored_directories_for_search">Ignored directories</string>
+    <string name="ignored_directories_for_search_dialog">Ignore folder names for search.\nUse separator \'|\'.\nUse quotes for exact dir names: \"test\"|\"Test\".\nOr use Regex \'^[.].*\'\nExample: ^\\..*|\"test\"|\"Test\"|.*secret.*\n</string>
+
 
 </resources>
