--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -421,6 +421,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="ignored_search_dir_names_dialog">Ignore folder names for search.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*</string>
     <string name="ignored_search_file_names">Ignored file names</string>
     <string name="ignored_search_file_names_dialog">Ignore file names for search.\nUse new line as separator.\nUse quotes for exact file names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^[.].*\n\"Test\"\n.*[.][mM][pP][34]$\n.*secret.*</string>
-
-
+    <string name="regex_enabled">Regex enabled</string>
+    <string name="regex_disabled">Regex disabled</string>
+    <string name="case_sensitivity_enabled">Case sensitivity enabled</string>
+    <string name="case_sensitivity_disabled">Case sensitivity disabled</string>
 </resources>
