--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -369,7 +369,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="expand_collapse">Uitvouwen / samenvouwen</string>
     <string name="essential">Essentieel</string>
     <string name="append_human_readable_uuid_to_new_tasks">Mensen leesbare UUID toevoegen aan nieuwe taken</string>
-    <string name="action_order">Actie bestelling</string>
+    <string name="action_order">Actie volgorde</string>
     <string name="toggle_action_visibility">Actie zichtbaarheid in-/uitschakelen</string>
     <string name="load_default_settings">Laad standaardinstellingen</string>
     <string name="drag">Sleep</string>
