--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -50,7 +50,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select">Elekti</string>
     <string name="create">Krei</string>
     <string name="select_entries">Elekti elementojn</string>
-    <string name="name">Dosiernomo</string>
+    <string name="name">Nomo</string>
     <string name="insert_link">Enmeti Ligilon</string>
     <string name="insert_image">Enmeti Bildon</string>
     <string name="contributors">Kontribuantoj</string>
@@ -61,7 +61,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_with">Malfermi per</string>
     <string name="sort">Ordigi laŭ</string>
     <string name="date">Dato</string>
-    <string name="deleteme____1">Nomo</string>
+    <string name="deleteme____1">Dosiernomo</string>
     <string name="size">Grando</string>
     <string name="exit">Eliri</string>
     <string name="undo">Malfari</string>
@@ -159,6 +159,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_2">Titolo 2</string>
     <string name="heading_3">Titolo 3</string>
     <string name="heading_4">Titolo 4</string>
+    <string name="heading_5">Titolo 5</string>
     <string name="bold">Dikigi</string>
     <string name="italic">Kursivigi</string>
     <string name="create_new_file_or_folder">Krei novan dosieron aŭ dosierujon</string>
